; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanQueryTally.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanQueryTally.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.zsCommTally = type { i32 }

@wd = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfiWlanQueryTally(i32* %0, %struct.zsCommTally* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.zsCommTally*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.zsCommTally* %1, %struct.zsCommTally** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @zmw_get_wlan_dev(i32* %5)
  %7 = call i32 (...) @zmw_declare_for_critical_section()
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @zmw_enter_critical_section(i32* %8)
  %10 = load %struct.zsCommTally*, %struct.zsCommTally** %4, align 8
  %11 = bitcast %struct.zsCommTally* %10 to i32*
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wd, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @zfMemoryCopy(i32* %11, i32* %13, i32 4)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @zmw_leave_critical_section(i32* %15)
  ret void
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zmw_declare_for_critical_section(...) #1

declare dso_local i32 @zmw_enter_critical_section(i32*) #1

declare dso_local i32 @zfMemoryCopy(i32*, i32*, i32) #1

declare dso_local i32 @zmw_leave_critical_section(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
